--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <title>dennyerikson.io</title>
 
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -31,9 +37,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Home</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Denny Erikson</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
+      
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -53,12 +59,12 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead bg-primary text-center">
-      <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile4.png" width="170" alt="">
-        <h1 style="color: #393939" class="text-uppercase mb-0">Denny Erikson</h1>
-        <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Developer - Python - Django</h2>
+    <header class="masthead bg-primary text-center text-white">
+      <div id="#header" class="container">
+        <img class="img-circle mb-5 d-block mx-auto" src="img/denny.jpeg" width="170" height="170" alt="">
+        <h1 style="color: #393939" class="text-uppercase text-white mb-0">Denny Erikson</h1>
+        <hr class="star-dark">
+        <h2 class="font-weight-light mb-0 ">Developer - Python - Django</h2>
       </div>
     </header>
 
@@ -66,7 +72,7 @@
     <section class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-        <hr class="star-dark mb-5">
+        <hr class="star-light mb-5">
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
@@ -135,7 +141,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 mb-5 mb-lg-0">
-              <h4 class="text-uppercase mb-4">Contato</h4>
+              <h2 class="text-uppercase mb-4">Contato</h2>
               <p class="lead mb-0">denny.erkson@gmail.com
                 <!-- <br>Clark, MO 65243</p> -->
             </div>
