--- a/index.html
+++ b/index.html
@@ -39,19 +39,18 @@
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Denny Erikson</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfólio</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Sobre</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contato</a>
             </li>
           </ul>
         </div>
@@ -64,14 +63,14 @@
         <img class="img-circle mb-5 d-block mx-auto" src="img/denny.jpeg" width="170" height="170" alt="">
         <h1 style="color: #393939" class="text-uppercase text-white mb-0">Denny Erikson</h1>
         <hr class="star-dark">
-        <h2 class="font-weight-light mb-0 ">Developer - Python - Django</h2>
+        <h2 class="font-weight-light mb-0 ">Developer | Python - Django</h2>
       </div>
     </header>
 
     <!-- Portfolio Grid Section -->
     <section class="portfolio" id="portfolio">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+        <h2 class="text-center text-uppercase text-secondary mb-0">Portfólio</h2>
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-md-6 col-lg-4">
@@ -116,14 +115,22 @@
     <!-- About Section -->
     <section style="color: #393939" class="bg-primary mb-0" id="about">
       <div class="container">
-        <h2 class="text-center text-uppercase ">About</h2>
+        <h2 class="text-center text-uppercase ">Sobre mim</h2>
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">
+                Sou Denny Erikson, tenho 31 anos e sou apaixonado por tecnologias, código e design.
+                Formado em Análise e Desenvolvimento de Sistemas e atualmente estou concluindo o meu curso de
+                Pós-Graduação em Tecnologias para Aplicações Web.
+            </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">
+                Atuo em TI, há aproximadamente 6 anos e em 2018 iniciei alguns projetos em programação
+                na última empresa que trabalhei com C#, Python e Django, desde então venho ampliando os meus conhecimentos,
+                buscando-me aprofundar cada vez mais em tecnologia.
+            </p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
@@ -143,13 +150,25 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 mb-5 mb-lg-0">
-              <h2 class="text-uppercase mb-4">Contato</h2>
+              <!-- <h2 class="text-uppercase mb-4">Contato</h2>
               <p class="lead mb-0">denny.erkson@gmail.com
-                <!-- <br>Clark, MO 65243</p> -->
+                </p> -->
             </div>
             <div class="col-md-4 mb-5 mb-lg-0">
-              <h4 class="text-uppercase mb-4">Around the Web</h4>
+                <h2 class="text-uppercase mb-4">Contato</h2>
+                <p>denny.erkson@gmail.com
+                  <br>
+                  (12) 9-9253-4546
+                </p>
+                <br>
               <ul class="list-inline mb-0">
+
+                  <li class="list-inline-item">
+                      <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://wa.me/5512992534546?text=">
+                        <!-- <i class="fab fa-fw fa-google-plus-g"></i> -->
+                        <i class="fab fa-whatsapp"></i>
+                      </a>
+                    </li>
                 
                 <li class="list-inline-item">
                   <a class="btn btn-outline-light btn-social text-center rounded-circle" href="mailto:denny.erikson@gmail.com">
@@ -170,7 +189,7 @@
                   </a>
                 </li>
 
-                <li class="list-inline-item">
+                <!-- <li class="list-inline-item">
                   <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/denny.erikson.1">
                     <i class="fab fa-fw fa-facebook-f"></i>
                   </a>
@@ -180,15 +199,15 @@
                   <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.instagram.com/dennyeriks0n">
                     <i class="fab fa-fw fa-instagram"></i>
                   </a>
-                </li>
+                </li> -->
               </ul>
             </div>
 
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <h4 class="text-uppercase mb-4">About Freelancer</h4>
               <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
                 <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
